--- a/jw_itsm/templates/index.html
+++ b/jw_itsm/templates/index.html
@@ -1,20 +1,25 @@
+<!-- {% load static %} -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>运维平台</title>
-    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    
+
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="#">首页</a></li>
-                <li><a href="#">工作台</a></li>
-                <li><a href="#" data-url="server-list.html" data-target="server-list">主机管理</a></li>
+                <!-- <li><a href="{% url 'serverlist' %}">主机管理</a></li> -->
+                <li><a href="../templates/server-list.html">主机管理</a></li>
+                <li><a href="#">应用发布</a></li>
+                <!-- <li><a href="#" data-url="server-list.html" data-target="server-list">主机管理</a></li> -->
                 <li><a href="#">批量执行</a></li>
-                <li><a href="#" data-url="app-release.html" data-target="app-release">应用发布</a></li>
+                <!-- <li><a href="#" data-url="app-release.html" data-target="app-release">应用发布</a></li> -->
                 <li><a href="#">任务计划</a></li>
                 <li><a href="#">配置中心</a></li>
                 <li><a href="#">监控中心</a></li>
@@ -67,7 +72,7 @@
     <footer>
         <p>&copy; 2024 服务器运维平台. All rights reserved</p>
     </footer>
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', function() {
             var navLinks = document.querySelectorAll('nav ul li a');
 
@@ -98,6 +103,6 @@
                 });
             });
         });
-    </script>
+    </script> -->
 </body>
 </html>
